# Proyecto2-3D-Renderer

./: CMakeLists.txt  README.md
Client/: CMakeCache.txt  CMakeLists.txt  Client  Makefile  cube_binary.stl  cylinder_binary.stl  main.c  prism_binary.stl  pyramid_binary.stl
Client/RSA/: rsa.c  rsa.h
Client/Renderer/: Renderer_alg.c  Renderer_alg.h  STL_file_handler.c  STL_file_handler.h  STL_to_h_converter.c  STL_to_h_converter.h
Client/Resources/: cube_binary.stl  pyramid_binary.stl
Driver6.8/: Makefile  driverp.c
Server/: CMakeLists.txt  biblioteca.c  biblioteca.h  hosts  main.c
Server/RSA/: rsa.c  rsa.h
Server/Renderer/: Renderer_alg.c  Renderer_alg.h  STL_file_handler.h  STL_to_h_converter.c  stl_merger.c  stl_merger.h
Server/Resources/: binary.stl  cube_binary.stl  cylinder_binary.stl  merged_shapes.stl  partial_binary_0.stl  partial_binary_1.stl  partial_cube_binary_0.stl  partial_cube_binary_1.stl  partial_cylinder_binary_0.stl  partial_cylinder_binary_1.stl  partial_prism_binary_0.stl  partial_prism_binary_1.stl  partial_pyramid_binary_0.stl  partial_pyramid_binary_1.stl  partial_sphere_binary_0.stl  partial_sphere_binary_1.stl  prism_binary.stl  pyramid_binary.stl  sphere_binary.stl
Server/Validation/: syntax.c  syntax.h
Server/pruebaconect/: pruebaconect.ino  shapes.h
pruebaconect/: shapes.h
